build(plugin): buil插件