@@ -1,19 +1,18 @@
 package fun.bigtable.kraken.util;
 
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 import java.util.Properties;
 
 /**
  */
 public class AESOperator {
 
-    private static final Properties PROPERTIES = PropertiesUtil.readProperties("properties/config-base.properties");
+    private static final Properties PROPERTIES = PropertiesUtils.readProperties("properties/config-base.properties");
 
     /*
      * 加密用的Key 可以用26个字母和数字组成 此处使用AES-128-CBC加密模式，key需要为16位。
@@ -65,12 +64,13 @@ public class AESOperator {
         if (key.length() != 16) {
             return null;
         }
-        SecretKeySpec skeySpec = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
+        SecretKeySpec skeySpec = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), "AES");
         IvParameterSpec iv = new IvParameterSpec(vector.getBytes());// 使用CBC模式，需要一个向量iv，可增加加密算法的强度
         Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
         cipher.init(Cipher.ENCRYPT_MODE, skeySpec, iv);
-        byte[] encrypted = cipher.doFinal(content.getBytes("UTF-8"));
-        return new BASE64Encoder().encode(encrypted);// 此处使用BASE64做转码。
+        byte[] encrypted = cipher.doFinal(content.getBytes(StandardCharsets.UTF_8));
+
+        return Base64.getEncoder().encodeToString(encrypted);// 此处使用BASE64做转码。
     }
 
     /**
@@ -110,14 +110,13 @@ public class AESOperator {
             if (key.length() != 16) {
                 return null;
             }
-            SecretKeySpec skeySpec = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
+            SecretKeySpec skeySpec = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), "AES");
             IvParameterSpec iv = new IvParameterSpec(vector.getBytes());
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
             cipher.init(Cipher.DECRYPT_MODE, skeySpec, iv);
-            byte[] encrypted1 = new BASE64Decoder().decodeBuffer(content);// 先用base64解密
+            byte[] encrypted1 = Base64.getDecoder().decode(content);// 先用base64解密
             byte[] original = cipher.doFinal(encrypted1);
-            String originalString = new String(original, "UTF-8");
-            return originalString;
+            return new String(original, StandardCharsets.UTF_8);
         } catch (Exception ex) {
             return null;
         }
